6.3.0
[add] support for keymapping of some endpoints, wiki: https://kodi.wiki/view/Add-on:YouTube#Keymaps
[fix] post play add to watch history
[fix] fix add-ons playback history not saving
[fix] playback monitoring/post play events triggering for the wrong videos in some cases
[upd] code cosmetics and resolve inspections
[upd] improve watch history tracking, actively report watch times and state during playback
[upd] sign in/out, switch user, and settings ListItems to isFolder=False and isPlayable=False
[upd] improve watch later playlist id retrieval and feedback
[upd] Use SPDX license identifier

6.2.3
[add] Next Page to 'More...' -> 'Add to...' context menu
[add] icon and description to playlists in 'More...' -> 'Add to...' context menu on Kodi 17+
[add] 'Play audio only' context menu item
[fix] generated dash with no supported video streams(audio only) being played when Audio only not enabled
[fix] potential RuntimeError when retrieving total time of playing content if player is stopped immediately
[lang] nl_nl strings |contrib: Markman-B|
[lang] pl_pl strings |contrib: xulek|
[lang] pl_pl strings |contrib: drrak|
[lang] sk_sk strings |contrib: jose1711|
[lang] el_gr strings |contrib: twilight0|
[lang] es_es strings |contrib: roliverosc|

6.2.2
[fix] signature function not found on some videos

6.2.1
[fix] some streams reporting as Unavailable
[fix] utf-8 file paths
[fix] settings, and switch user causing perpetual busy dialog on Kodi 18

6.2.0
[add] Context menu -> 'Play with subtitles' |contrib: solarus|
[add] Option to download subtitles before playback in Settings -> General -> Configure subtitles
[add] Refresh context menu to all videos/live streams
[add] &strm=true parameter for strm files in Kodi 18 |contrib: vlmaksime|
    - use description from library and set watched status
[add] 'Settings -> Advanced -> Use YouTube website urls' for external/alternative players
            eg. Player: MPC-BE, URL: https://www.youtube.com/watch?v=C0NyvxTJGcQ